Fix: ServiceItemRepository 테스트에서 QueryDSL Import